src/objects/Joint_Business_Plan_Contact_Role__c.object
<CustomObject>
    <description>R5 - Joint Business Plan Contact Role</description>
    <fields>
        <fullName>ABB_Perspective_Role__c</fullName>
        <description>R5 - ABB Perspective Role</description>
        <label>Role from ABB Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>R5 - Contact Name</description>
        <formula>Contact__r.FirstName  &amp;  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>R5 - Master-Detail Relationship with Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Channel Partner Contact Roles</relationshipLabel>
        <relationshipName>Joint_Business_Plan_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Master-Detail Relationship with Joint Business Plan.</description>
        <label>Channel Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipName>Joint_Business_Plan_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines__c</fullName>
        <description>R5 - Concatenate all the products of particular contact.</description>
        <label>Product Lines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>It Is created for X-Author</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Contact_Check__c</fullName>
        <description>R5 - Unique Contact Check</description>
        <label>Unique Contact Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Channel Partner Contact Roles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-CONTACT-{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JBP_Status_Closed_Check_ContactRoles</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Channel Partner Contact Role</description>
        <errorConditionFormula>OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;), 
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;) 
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>